# traceability-engine

./: .gitignore  README.md  pyproject.toml
traceability_engine/: engine_logic.py  main.py  parser.py  translator.py
